--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,11 @@
     padding: 0;
 }
 
+/* Header */
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(assets/images/banner.jpg);
+    background-image: linear-gradient(rgba(236, 239, 250, 0.7), rgba(8, 32, 129, 0.7)), /* Fix URL, img not showing */ url(assets/images/banner.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
