--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,19 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-
+/* Logo size */
 nav img{
     width: 150px;
+}
+/* Nav links style */
+.nav-links{
+flex: 1;
+text text-align: right;
+}
+
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
 }
