Add font size and remove underline of the nav links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,7 @@ text text-align: right;
     padding: 8px 12px;
     position: relative;
 }
+.nav-links ul li a{
+    text-decoration: none;
+    font-size: 20px;
+}
