--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,11 @@ text-align: right;
     text-decoration: none;
     font-size: 20px;
 }
+.nav-links ul li::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #777777;
+    display: block;
+    margin: auto;
+}
