--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,9 +42,13 @@ text-align: right;
 }
 .nav-links ul li::after{
     content: '';
-    width: 100%;
+    width: 0%;
     height: 2px;
     background: #777777;
     display: block;
     margin: auto;
+    transition: 0.5s;
+}
+.nav-links ul li:hover::after{
+    width: 100%;
 }
