Change the h1 and p font-size and margin fot the textbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,3 +62,11 @@ text-align: right;
     transform: translate(-50%, -50%);
     text-align: center;
 }
+.text-box h1{
+    font-size: 50px;
+}
+
+.text-box p{
+    font-size: 20px;
+    margin: 10px 0 20px;
+}
