--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,4 +69,17 @@ text-align: right;
 .text-box p{
     font-size: 20px;
     margin: 10px 0 20px;
+    color: rgb(32, 32, 32);
+}
+
+.button1{
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    border: 1px solid rgb(32, 32, 32);
+    padding: 10px 30px;
+    font-size: 13px bold;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
 }
