Scale the font size of h1 class for a smaller displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,3 +90,9 @@ text-align: right;
     background: rgba(136, 231, 255, 0.568);
     transition: 1s;
 }
+
+@media(max-width: 700px){
+    .text-box h1{
+        font-size: 20px;
+    }
+}
