--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,4 +96,17 @@ text-align: right;
     .text-box h1{
         font-size: 20px;
     }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: rgba(234, 189, 255, 0.219);
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
 }
