--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,7 @@ nav .fa{
         right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 1sg;
     }
     nav .fa{
         display: block;
