--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,15 +105,16 @@ nav .fa{
     }
     .nav-links{
         position: absolute;
-        background: rgba(234, 189, 255, 0.219);
+        background: rgb(249, 237, 255);
         height: 100vh;
         width: 200px;
         top: 0;
         right: -200px;
         text-align: left;
         z-index: 2;
-        transition: 1sg;
+        transition: 1s;
     }
+
     nav .fa{
         display: block;
         color: black;
