--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,14 @@ text-align: right;
 nav .fa{
     display: none;
 }
+#social-networks{
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px 0;
+    background-color: rgb(255, 151, 151);
+
+}
 
 @media(max-width: 768px){
     .text-box h1{
@@ -125,4 +133,5 @@ nav .fa{
     .nav-links ul{
         padding: 30px;
     }
+   
 }
