--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,8 +99,9 @@ nav .fa{
     text-align: center;
     display: flex;
     justify-content: space-evenly;
-    margin: 20px 0;
+    margin: 0 0;
     background-color: rgb(255, 151, 151);
+    list-style-type:none;
 
 }
 
