--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,12 @@
     font-family: 'Prompt', sans-serif;
 }
 
+
 /* Header */
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(236, 239, 250, 0.7), rgba(8, 32, 129, 0.7)), /* Fix URL, img not showing */ url(../images/banner.jpg);
+    background-image: linear-gradient(rgba(236, 239, 250, 0.7), rgba(8, 32, 129, 0.7)), url(../images/banner.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
