--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,19 @@
     font-family: 'Prompt', sans-serif;
 }
 
+/*Transition*/
+@keyframes transitionIn{
+    from{
+        opacity: 0;
+        transform: rotateX(-10eg);
+    }
+
+    to{
+        opacity: 1;
+        transform: rotateX(0);
+    }
+}
+
 
 /* Header */
 .header{
