--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ nav .fa{
     color:black;
 }
 
+/*Phones max width*/
 @media(max-width: 768px){
     .text-box h1{
         font-size: 20px;
@@ -158,4 +159,18 @@ nav .fa{
         padding: 30px;
     }
    
+}
+/*Tablets and larger*/
+@media screen and (min-width: 768px){ 
+    .nav-links{
+        position: absolute;
+        background: rgb(249, 237, 255);
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
 }
