--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,9 @@ nav .fa{
     .text-box h1{
         font-size: 20px;
     }
+    .text-box p{
+        font-size: 15px;
+    }
     .nav-links ul li{
         display: block;
     }
@@ -162,15 +165,6 @@ nav .fa{
 }
 /*Tablets and larger*/
 @media screen and (min-width: 768px){ 
-    .nav-links{
-        position: absolute;
-        background: rgb(249, 237, 255);
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
+
+    
 }
