--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,30 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Prompt', sans-serif;
 }
 
+
 /*Transition*/
-@keyframes transitionIn{
-    from{
+@keyframes transitionIn {
+    from {
         opacity: 0;
         transform: rotateX(-10eg);
     }
 
-    to{
+    to {
         opacity: 1;
         transform: rotateX(0);
     }
 }
 
-.text-box h1{
-    animation: transitionIn 0.7s; 
+.text-box h1 {
+    animation: transitionIn 0.7s;
 }
 
 
 /* Header */
-.header{
+.header {
     min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(236, 239, 250, 0.7), rgba(8, 32, 129, 0.7)), url(../images/banner.jpg);
@@ -32,34 +33,38 @@
     position: relative;
 }
 
-nav{
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
 }
+
 /* Logo size */
-nav img{
+nav img {
     width: 2.5vh;
     height: 2.5vh;
 }
+
 /* Nav links style */
-.nav-links{
-flex: 1;
-text-align: right;
+.nav-links {
+    flex: 1;
+    text-align: right;
 }
 
-.nav-links ul li{
+.nav-links ul li {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
-.nav-links ul li a{
+
+.nav-links ul li a {
     text-decoration: none;
     font-size: 20px;
 }
-.nav-links ul li::after{
+
+.nav-links ul li::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -68,11 +73,12 @@ text-align: right;
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li:hover::after{
+
+.nav-links ul li:hover::after {
     width: 100%;
 }
 
-.text-box{
+.text-box {
     width: 80%;
     color: rgb(32, 32, 32);
     position: absolute;
@@ -81,17 +87,18 @@ text-align: right;
     transform: translate(-50%, -50%);
     text-align: center;
 }
-.text-box h1{
+
+.text-box h1 {
     font-size: 50px;
 }
 
-.text-box p{
+.text-box p {
     font-size: 20px;
     margin: 10px 0 20px;
     color: rgb(32, 32, 32);
 }
 
-.button1{
+.button1 {
     display: inline-block;
     text-decoration: none;
     color: rgb(0, 0, 0);
@@ -104,43 +111,50 @@ text-align: right;
     border-radius: 10px;
 }
 
-.button1:hover{
+.button1:hover {
     border: 1px solid rgba(136, 231, 255, 0.568);
     background: rgba(136, 231, 255, 0.568);
     transition: 1s;
 }
 
-nav .fa{
+nav .fa {
     display: none;
 }
-#social-networks{
+
+#social-networks {
     text-align: center;
     display: flex;
     justify-content: space-evenly;
     margin: 0 0;
-    background-color:grey;
-    list-style-type:none;
+    background-color: grey;
+    list-style-type: none;
 
 }
-#social-networks i{
-    font-size:160%;
-    padding:10%;
-    color:black;
+
+#social-networks i {
+    font-size: 160%;
+    padding: 10%;
+    color: black;
 }
 
 /*Phones max width*/
-@media(max-width: 768px){
-    .text-box h1{
+@media(max-width: 768px) {
+    .text-box h1 {
         font-size: 20px;
     }
-    .text-box p{
-        font-size: 15px;
+
+    .text-box p {
+        font-size: 10px;
     }
-    .nav-links ul li{
+
+    .nav-links ul li {
         display: block;
     }
-    .nav-links{
-        position: absolute;
+
+    }
+
+    .nav-links {
+        position: fixed;
         background: rgb(249, 237, 255);
         height: 100vh;
         width: 200px;
@@ -151,20 +165,20 @@ nav .fa{
         transition: 1s;
     }
 
-    nav .fa{
+    nav .fa {
         display: block;
         color: black;
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
     }
-    .nav-links ul{
+
+    .nav-links ul {
         padding: 30px;
     }
-   
-}
-/*Tablets and larger*/
-@media screen and (min-width: 768px){ 
 
-    
+
+/*Tablets and larger*/
+@media screen and (min-width: 768px) {
+
 }
