Add padding to nav closing icon so its paralell with the banner and the burger icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,12 +178,7 @@ nav .fa {
 }
 
 /*Tablets and larger*/
-@media screen and (min-width: 768px) {
-
-}
+@media screen and (min-width: 768px) {}
 
 /*Laptops and larger*/
-@media screen and (min-width: 992px) {
-    
-    
-}
+@media screen and (min-width: 992px) {}
