Add a copyright text bottom of footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,9 @@ nav .fa {
 .sub-heading{
     text-align: center;
 }
+.footerBottom{
+    text-align: center;
+}
 
 /*Phones max width*/
 @media(max-width: 768px) {
