Center copyright text, make smaller text on smaller phone displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,9 @@ nav .fa {
     .nav-links ul {
         padding: 30px;
     }
+    .sub-heading, .footerBottom{
+        font-size: small;
+    }
 }
 
 /*Tablets and larger*/
