Add content to the other pages, about, contact and treatments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,9 +139,12 @@ nav .fa {
 }
 .sub-heading{
     text-align: center;
+    background-color: rgb(83 97 153);
+
 }
 .footerBottom{
     text-align: center;
+    background-color: rgb(83 97 153);
 }
 
 /*Phones max width*/
