--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     }
 }
 
-.text-box h1 {
+.text-box h1, h3, p{
     animation: transitionIn 0.7s;
 }
 
@@ -163,6 +163,10 @@ nav .fa {
         
     }
 
+    .text-box h3{
+        font-size: 10px;
+    }
+
     .nav-links ul li {
         display: block;
     }
@@ -213,4 +217,6 @@ nav .fa {
         width: 50%;
         margin-left: auto;
         margin-right: auto;
+    }
 }
+   
