Move the video to the right of the display, add a border and border-radius

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,8 +152,8 @@ nav .fa {
 
 /*Utube video*/
 .container{
-    width: 380px;
-    height: 480px;
+   display: flex;
+   justify-content: flex-end;
 
 }
 
