--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ p {
 }
 
 nav {
-    display: flex;
+    display: block;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
@@ -161,7 +161,6 @@ nav .fa {
     animation: transitionIn 0.7s;
 
 }
-
 /*Phones max width*/
 @media(max-width: 768px) {
     .text-box h1 {
@@ -213,6 +212,7 @@ nav .fa {
         background-color: rgb(83 97 153);
     }
 /*Continue here, display of the utube video*/
+}
 
 /*Tablets and larger*/
 @media screen and (min-width: 768px){
