--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ p {
 }
 
 nav {
-    display: block;
+    display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
