--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,10 @@ nav .fa {
         font-size: small;
         background-color: rgb(83 97 153);
     }
+    .map{
+        text-align:center;
+        
+    }
 /*Continue here, display of the utube video*/
 }
 
