--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Prompt', sans-serif;
+    overflow: auto;
 }
 
 
@@ -211,7 +212,7 @@ nav .fa {
     }
 
     .map {
-        text-align:center;
+    
     }
 
     /*Continue here, display of the utube video*/
