Add overflow hidden to hide the scrollbar inside the map. Add Map comment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,7 @@ nav .fa {
     width: 60%;
     margin-left: 20%;
     display: flex;
+    overflow: hidden;
 }
 .video-container{
     width: 100%;
