Change name for video-container in about to utubevideo-container so it can have its own rules

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,10 @@ nav .fa {
     display: flex;
     overflow: hidden;
 }
+.utubevideo-container{
+    width: 100%;
+
+}
 
 /*Phones max width*/
 @media(max-width: 768px) {
