Add Mailing list to html, a h3 and a paragraf. Align text in css to center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,12 @@ nav .fa {
 }
 .utubevideo-container{
     width: 100%;
+    
 
+}
+/*Mailing-List*/
+.mail-list{
+    text-align: center;
 }
 
 /*Phones max width*/
