--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,9 @@ nav .fa {
 #_name{
     background-color: rgba(255, 255, 255, 0.212);
 }
+::placeholder {
+    color: black;
+  }
 
 /*Phones max width*/
 @media(max-width: 768px) {
