Add another class for the images and change the pixels to 1200. Set max width of the images to 400px and give them a flex wrap and set width to 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,8 +124,10 @@ nav img {
 
 /*Picture Container*/
 .pic-container{
-    width: 700px;
     display: flex;
+}
+.pic-container img{
+    width: 1200px;
 }
 
 nav .fa {
