Change max width to 600px and width of the pictures to 200px so they are evenly spreaded

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,9 +125,13 @@ nav img {
 /*Picture Container*/
 .pic-container{
     display: flex;
+    max-width: 600px;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
 }
 .pic-container img{
-    width: 1200px;
+    width: 200px;
 }
 
 nav .fa {
