Add a padding so there are space between the pictures and set border radius to 45px to rounder the corners

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,9 +128,12 @@ nav img {
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
+
 }
 .pic-container img{
     width: 355px;
+    padding: 10px;
+    border-radius: 45px;
 }
 
 nav .fa {
