--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,12 @@ nav img {
     text-align: center;
 }
 .treatments p{
-    background-color: red
+    border-radius: 10px;
+    margin: 1em;
+    display: inline-block;
+    background-color: #f96b6b1c;
+    padding: 10px 30px;
+
 }
 
 
