Add pic container (images) to phone display and set them to 150 px so they dont appear big, instead they will appear smaller in a flex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,12 @@ nav .fa {
         font-size: small;
         background-color: rgb(83 97 153);
     }
+    .pic-container img {
+        width: 150px;
+        padding: 10px;
+        border-radius: 45px;
+        opacity: 0.8;
+    }
 
 }
 
