Add font size 2vh for textbox h2 so that it apears smaller on phone display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,10 @@ nav .fa {
 /*Phones max width*/
 @media(max-width: 768px) {
 
+    .text-box h2{
+        font-size: 2vh;
+    }
+
     .text-box h1 {
         font-size: 2vh;
 
