--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,11 @@ nav img {
     margin-left: auto;
     margin-right: auto;
 }
+#info{
+    font-size: 15px;
+    width: 33%;
+    border: 1px solid rgb(32, 32, 32);
+}
 
 /*Hover Button*/
 .button1 {
@@ -144,11 +149,13 @@ nav img {
     opacity: 1;
     transition: 1s;
 }
+
 /*Treatments with price*/
 .treatments {
     text-align: center;
 }
-.treatments p{
+
+.treatments p {
     border-radius: 10px;
     margin: 1em;
     display: inline-block;
@@ -249,7 +256,7 @@ nav .fa {
 /*Phones max width*/
 @media(max-width: 768px) {
 
-    .text-box h2{
+    .text-box h2 {
         font-size: 2vh;
     }
 
@@ -301,6 +308,7 @@ nav .fa {
         font-size: small;
         background-color: rgb(83 97 153);
     }
+
     .pic-container img {
         width: 150px;
         padding: 10px;
