Add info to smaller screen size and change font size to 15px and add width to 50% so it looks more compact and bigger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,10 +266,14 @@ nav .fa {
     }
 
     .text-box p {
-        font-size: 10px;
-        width: 50%;
+        font-size: 15px;
+        width: 70%;
 
     }
+    #info{
+        font-size: 15px;
+        width: 50%;
+        border: 1px solid rgb(32, 32, 32);}
 
     .text-box h3 {
         font-size: 1em;
