--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,12 @@ nav img {
     width: 2.5vh;
     height: 2.5vh;
 }
+nav img{
+    transition: 0.5s;
+}
+nav img:hover{
+transform: rotateY(360deg);
+}
 
 /* Nav links style */
 .nav-links {
@@ -103,7 +109,8 @@ nav img {
     margin-left: auto;
     margin-right: auto;
 }
-#info{
+
+#info {
     font-size: 15px;
     width: 33%;
     border: 1px solid rgb(32, 32, 32);
@@ -270,10 +277,12 @@ nav .fa {
         width: 70%;
 
     }
-    #info{
+
+    #info {
         font-size: 15px;
         width: 50%;
-        border: 1px solid rgb(32, 32, 32);}
+        border: 1px solid rgb(32, 32, 32);
+    }
 
     .text-box h3 {
         font-size: 1em;
