Make the youtube video centered, add justify-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,7 @@ nav .fa {
     margin-left: 20%;
     display: flex;
     overflow: hidden;
+    justify-content: center;
 }
 
 .utubevideo-container {
