In the form, change the cols to 50 and rows to 12 for bigger size. Add more transparancy for better view to the whole form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,15 +249,15 @@ nav .fa {
 }
 
 #message {
-    background-color: rgba(255, 255, 255, 0.212);
+    background-color: rgb(255 255 255 / 66%);
 }
 
 #email_address {
-    background-color: rgba(255, 255, 255, 0.212);
+    background-color: rgb(255 255 255 / 66%);
 }
 
 #_name {
-    background-color: rgba(255, 255, 255, 0.212);
+    background-color: rgb(255 255 255 / 66%);
 }
 
 ::placeholder {
