--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ nav .fa {
 /*Map*/
 .map {
     width: 100%;
-  
+
     display: flex;
     overflow: hidden;
 }
@@ -224,13 +224,13 @@ nav .fa {
     display: flex;
     overflow: hidden;
     justify-content: center;
-    
- 
+
+
 }
 
 .utubevideo-container {
     width: 100%;
-    
+
 }
 
 /*Mailing-List*/
@@ -245,6 +245,8 @@ nav .fa {
 
 .send-button {
     background-color: rgba(255, 255, 255, 0.212);
+    width: 20em;
+    margin-top: 10px;
 
 }
 
