--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,13 +166,13 @@ nav img:hover {
     text-align: center;
 }
 
-.treatments p {
-    border-radius: 10px;
-    margin: 1em;
-    display: inline-block;
-    background-color: #f96b6b1c;
-    padding: 10px 30px;
+
+.treatments-section {
+    display: flex;
+    justify-content:center;
+
 }
+
 
 
 nav .fa {
