Set margin for the treatment-section to auto so it is centered and add margin bottom to text so it is spaced out

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,9 +169,13 @@ nav img:hover {
 
 .treatments-section {
     display: flex;
-    justify-content:center;
     flex-direction: column;
-
+    width: 50%;
+    text-align: center;
+    margin: auto;
+}
+.treatments-section p{
+    margin-bottom: 5vh;
 }
 
 
