Error fix in Iframe html. Delete the iframe border 0 to correct the error code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,10 @@
     overflow: auto;
 }
 
-
+iframe{
+    width: 560px;
+    height: 315px;
+}
 /*Transition*/
 @keyframes transitionIn {
     from {
