Add an id to treatments h1 and make it bigger and centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,9 +163,11 @@ nav img:hover {
 /*Treatments*/
 .treatments {
     text-align: center;
-    font-size: 3vh;
 }
-
+#treatments{
+    font-size: 3vh;
+    text-align: center;
+}
 
 .treatments-section {
     display: flex;
